tests/parser/argument_validation/test_22.m
% From https://www.mathworks.com/help/matlab/matlab_prog/function-argument-validation-1.html

function test_22(x,y,propArgs)
    arguments
        x (:,:) double
        y (:,:) double
        propArgs.?matlab.graphics.chart.primitive.Bar
    end
    propertyCell = namedargs2cell(propArgs);
    bar(x,y,propertyCell{:})
end
